src/index.css
@import "tailwindcss";

@layer theme {
  :root {
    --spacing: 1rem;
    --gap-xs: 0.5rem;
    --gap-sm: 1rem;
    --gap-md: 2rem;
    --gap-lg: 4rem;

    --gap-border: var(--gap-md);

    --color-pale: #fff8f7;
    --color-mauve: #7f2549;
    --color-cream: #fffefd;
    --color-shadow: #caa5af;

    --color-bg-primary: var(--color-pale);
    --color-bg-secondary: var(--color-mauve);

    --color-text-primary: var(--color-mauve);
    --color-text-secondary: var(--color-cream);
    --color-text-shadow: var(--color-shadow);

    --font-normal: "Libre Baskerville";
    --font-fancy: "Pinyon Script";

    --size-md: 1.1rem;
    --size-lg: 1.25rem;
  }

  @media (min-width: 40rem) {
    :root {
      --gap-border: var(--gap-lg);
      --size-md: 1.33rem;
      --size-lg: 1.75rem;
    }
  }
}

@layer base {
  :root {
    @apply text-(--color-text-primary) bg-(--color-bg-primary);
    font-family: var(--font-normal);
  }

  main {
    @apply mx-auto max-w-5xl;

    & > header,
    & > footer,
    & > article {
      @apply px-(--gap-border);
    }
    & > hr:not([data-vertical]) {
      @apply mx-(--gap-border);
    }
  }

  em {
    @apply normal-case;
    font-family: var(--font-fancy);
  }

  section.grid {
    @apply gap-(--gap-lg);
  }

  a {
    @apply uppercase whitespace-nowrap;
  }

  a.border {
    @apply p-0.5 inline-block;
  }

  nav a {
    @apply rounded-sm;
  }

  img {
    @apply min-w-0;
  }

  hr:not([data-vertical]) {
    @apply my-(--gap-md);
  }

  hr[data-vertical] {
    @apply mx-(--gap-xs);
  }

  em {
    & q {
      color: var(--color-shadow);
      &::before,
      &::after {
        @apply hidden;
      }
    }
  }

  em {
    @apply font-(--font-fancy) not-italic;
    font-size: 2.5em;
  }

  p {
    @apply mb-(--gap-sm);

    & a {
      @apply underline font-bold normal-case;
    }
  }

  h1 {
    @apply tracking-wide;
    font-size: var(--size-lg);

    & small {
      @apply italic px-0.25;
    }
  }

  h2 {
    @apply uppercase;
    font-size: var(--size-md);
  }

  small {
    font-size: 0.5em;
  }
}

@layer utilities {
  .z-top {
    @apply z-1000;
  }

  .chromatic {
    @apply grayscale-0 hover:grayscale-0 group-hover:grayscale-0 duration-200 sm:grayscale-100;
  }

  .framed {
    @apply border p-(--gap-xs);
  }
}

@layer components {
  hr[data-vertical] {
    @apply inline-block border-0 border-l h-1;
  }

  [data-logo] {
    @apply h-10;

    & img {
      @apply h-full;
    }
  }

  nav {
    &[data-horizontal],
    &[data-vertical] {
      &,
      & ul {
        @apply flex justify-between gap-(--gap-sm);
      }
    }

    &[data-horizontal] {
      &,
      & ul {
        @apply flex-row items-center;
      }
    }

    &[data-vertical] {
      &,
      & ul {
        @apply flex-col items-start;
      }
    }
  }

  [data-dropdown] {
    @apply w-full overflow-hidden max-h-0 transition-[max-height] duration-200 ease-in-out;
  }

  [data-arrow] {
    @apply inline-block relative h-0 border-b border-t min-w-4 scale-50 -translate-y-[0.25em];

    &::before {
      content: "";
      @apply absolute -top-0.5 right-0 h-1 w-1 border-r-2 rotate-45;
    }
    &::after {
      content: "";
      @apply absolute -bottom-0.5 right-0 h-1 w-1 border-r-2 -rotate-45;
    }
  }

  ul[role="marquee"] {
    @apply flex h-[33vh] overflow-x-auto;

    & li {
      @apply flex-none h-full aspect-square;
    }

    & figure {
      @apply relative h-full;

      & figcaption {
        @apply absolute top-0 left-0 m-(--gap-sm) px-(--gap-sm) bg-(--color-bg-primary) rounded-md;
      }

      & img {
        @apply h-full w-full object-cover;
      }
    }
  }

  #itinerary {
    & section {
      & dt {
        @apply mt-(--gap-md);
      }
      & h1 {
        @apply font-bold;
      }
      & h2 {
        @apply mb-(--gap-xs) font-bold;
      }
    }
  }

  #details {
    & h1 {
      @apply mb-(--gap-sm) font-bold;
    }

    & em {
      @apply font-normal;
    }
  }
}

